# rlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: main.c
examples/: CMakeLists.txt  array.c  injector.cpp  main.c  serializer.c  support.cpp
include/: rlib.h
src/: rlib.c
